fix horizontal scroll

--- a/src/app/features/transfer-funds/components/ConnetingLine/index.module.scss
+++ b/src/app/features/transfer-funds/components/ConnetingLine/index.module.scss
@@ -3,7 +3,6 @@
   align-items: center;
   justify-content: center;
   width: 8rem;
-  flex-shrink: 0;
 }
 
 .divider {
