--- a/src/app/features/transfer-funds/components/HowItWorks/index.module.scss
+++ b/src/app/features/transfer-funds/components/HowItWorks/index.module.scss
@@ -1,8 +1,6 @@
 .root {
   width: 100dvw;
   grid-column: span 12;
-  // height: 200dvh;
-  scroll-timeline-name: --how-to-timeline;
 }
 
 .h2 {
@@ -18,37 +16,45 @@
   margin-bottom: 4rem;
 }
 
+.stepsYScroll {
+  min-height: 600dvh;
+  view-timeline-name: --how-to-timeline;
+  view-timeline-axis: y;
+}
+
+.stepsContainer {
+  height: fit-content;
+  position: sticky;
+  height: auto;
+  top: calc(50dvh - (var(--steps-height) / 2));
+  overflow-x: clip;
+  width: 100%;
+}
+
 .steps {
   list-style: none;
   display: grid;
   grid-auto-flow: column;
-  overflow-x: auto;
-  width: 100%;
   padding-top: 1rem;
   padding-inline: var(--page-padding-inline);
-  scrollbar-color: var(--color-scrollbar-thumb) var(--color-scrollbar-track);
-  scrollbar-width: thin;
+  // scrollbar-color: var(--color-scrollbar-thumb) var(--color-scrollbar-track);
+  // scrollbar-width: thin;
   padding-bottom: 2rem;
+  animation-timeline: --how-to-timeline;
+  animation-range: entry 100% exit 0%;
+  animation-name: move;
+  animation-fill-mode: both;
+  animation-timing-function: var(--ease-out-quart);
+}
+
+@keyframes move {
+  to {
+    transform: translateX(calc(-100% + 50dvw));
+  }
 }
 
 .step {
   width: 320px;
-}
-
-.step:not(:first-child) {
-  transform: translateX(100dvw);
-  animation: reveal linear both;
-  animation-timeline: view(block);
-  animation-range: entry-crossing 0% entry-crossing 100%;
-}
-
-@keyframes reveal {
-  from {
-    transform: translateX(100dvw);
-  }
-  to {
-    transform: translateX(0);
-  }
 }
 
 .divider {
@@ -62,4 +68,26 @@
   line-height: 1.8;
   margin-block: 2rem;
   text-wrap: pretty;
+}
+
+.divider {
+  animation-timeline: --how-to-timeline;
+  animation-name: resize;
+  animation-fill-mode: both;
+  animation-timing-function: var(--ease-out-bounce);
+  align-self: center;
+  --amount: calc(100% - 50dvh);
+
+  @for $i from 1 through 6 {
+    &:nth-of-type(#{$i}) {
+      animation-range-start: cover calc((100% - 50dvh) / 12 * $i);
+      animation-range-end: cover calc((100% - 50dvh) / 12 * ($i + 1));
+    }
+  }
+}
+
+@keyframes resize {
+  from {
+    width: 100dvw;
+  }
 }
